--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,9 @@
             </plugin>
              <plugin>
               <artifactId>maven-war-plugin</artifactId>
-              <version>2.6</version>
+<configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </configuration>              <version>2.6</version>
               <configuration>
                   <warName>ROOT</warName>
               </configuration>
