--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,10 @@
             </plugin>
              <plugin>
               <artifactId>maven-war-plugin</artifactId>
-<configuration>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
-    </configuration>              <version>2.6</version>
+              <version>2.6</version>
               <configuration>
                   <warName>ROOT</warName>
+                  <failOnMissingWebXml>false</failOnMissingWebXml>
               </configuration>
           </plugin>
         </plugins>
